feat: add Express server and API endpoint for notes; update package.json and .gitignore

--- a/part3/3a/package.json
+++ b/part3/3a/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "Hammad Shafiq",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.21.1"
+  }
 }
