--- a/part3/3a/package.json
+++ b/part3/3a/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "backend",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "keywords": [],
-  "author": "Hammad Shafiq",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.21.1"
-  }
+    "name": "backend",
+    "version": "0.0.1",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js"
+    },
+    "keywords": [],
+    "author": "Hammad Shafiq",
+    "license": "MIT",
+    "dependencies": {
+        "express": "^4.21.1"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.7"
+    }
 }
