feat: add build and deploy scripts for UI management

--- a/part3/package.json
+++ b/part3/package.json
@@ -5,7 +5,9 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "dev": "nodemon index.js",
+        "build:ui": "rm -rf dist && cd ../part2 && pnpm run build && cp -r dist ../part3",
+        "deploy:full": "pnpm run build:ui && git add . && git commit -m uibuild && git push"
     },
     "keywords": [],
     "author": "Hammad Shafiq",
