--- a/part3/package.json
+++ b/part3/package.json
@@ -14,7 +14,8 @@
     "license": "MIT",
     "dependencies": {
         "cors": "^2.8.5",
-        "express": "^4.21.1"
+        "express": "^4.21.1",
+        "mongoose": "^8.8.3"
     },
     "devDependencies": {
         "nodemon": "^3.1.7"
