--- a/part3/package.json
+++ b/part3/package.json
@@ -7,7 +7,8 @@
         "start": "node index.js",
         "dev": "nodemon index.js",
         "build:ui": "rm -rf dist && cd ../part2 && pnpm run build && cp -r dist ../part3",
-        "deploy:full": "pnpm run build:ui && git add . && git commit -m uibuild && git push"
+        "deploy:full": "pnpm run build:ui && git add . && git commit -m uibuild && git push",
+        "lint": "eslint ."
     },
     "keywords": [],
     "author": "Hammad Shafiq",
@@ -18,6 +19,10 @@
         "mongoose": "^8.8.3"
     },
     "devDependencies": {
+        "@eslint/js": "^9.16.0",
+        "@stylistic/eslint-plugin-js": "^2.11.0",
+        "eslint": "^9.16.0",
+        "globals": "^15.13.0",
         "nodemon": "^3.1.7"
     }
 }
